completed shop page and product card have to now finish the product page and link everything. Also fixed the refresh image bug with z-index

--- a/src/styles/_colors.scss
+++ b/src/styles/_colors.scss
@@ -5,6 +5,7 @@ $nav-font-color: #000000;
 $welcome-screen-font-color: #FFFFFF;
 // standard font
 $font-color: #000000;
+$font-opacity-color: #000000b0;
 $hover-font-color: #4eab6d;
 // highlight text
 $selection-background-color: #000000;
