--- a/src/styles/home.scss
+++ b/src/styles/home.scss
@@ -11,6 +11,7 @@
       transition: transform cubic-bezier(0.9, 0, 0.34, 0.42) 0.9s;
       background-image: url('../assets/images/welcome.jpeg');
       background-size: cover;
+      z-index: 1;
     }
 
     .welcome-screen-message-container {
@@ -92,7 +93,7 @@
           left: 0;
           right: 0;
           opacity: 0;
-          transition: 0.3s ease;
+          transition: 0.3s ease-in-out;
           background-color: colors.$overlay-color;
           display: flex;
           justify-content: center;
