--- a/src/styles/shop.scss
+++ b/src/styles/shop.scss
@@ -1,20 +1,26 @@
+@use './colors';
 @use './resolutions';
 
 .shop {
   font-family: univers;
   display: grid;
   grid-template-columns: repeat(3, 1fr);
-  row-gap: 5vh;
   justify-items: center;
   align-items: center;
   margin: 5vh 0 10vh;
-  
+  row-gap: 6vh;
+
+  a {
+    text-decoration: none;
+  }
+
   .card {
     display: flex;
     flex-direction: column;
     width: 25vw;
     height: 100%;
     cursor: pointer;
+    color: colors.$font-color;
 
     .info {
       padding-top: 2.5vh;
@@ -27,11 +33,11 @@
         font-family: Arial, Helvetica, sans-serif;
         font-size: 0.9em;
         height: 2.4em;
-        opacity: 0.7;
+        color: colors.$font-opacity-color;
       }
 
       .price {
-        padding-top: 3vh;
+        padding-top: 2vh;
       }
     }
   }
